force-app/main/default/objects/bgcc__Community_Setting__mdt/bgcc__Community_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Community Setting</label>
    <pluralLabel>Community Settings</pluralLabel>
</CustomObject>