force-app/main/default/objects/bgcc__Community_Setting__mdt/fields/bgcc__Attestation_File_Name__c.field-meta.xml
<CustomField>
    <fullName>bgcc__Attestation_File_Name__c</fullName>
    <defaultValue>&quot;communityAttestationDocument&quot;</defaultValue>
    <description>Attestation file name for file which stored in static resource</description>
    <label>Attestation File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>