force-app/main/default/objects/bgcc__Community_Setting__mdt/fields/bgcc__Enable_Owner_Payables__c.field-meta.xml
<CustomField>
    <fullName>bgcc__Enable_Owner_Payables__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Owner Payables</label>
    <type>Checkbox</type>
</CustomField>