force-app/main/default/objects/bgcc__Community_Setting__mdt/fields/bgcc__Permit_Fee_Service_Class__c.field-meta.xml
<CustomField>
    <fullName>bgcc__Permit_Fee_Service_Class__c</fullName>
    <description>Customized Permit Fee Service class which need to implement IFeeService which have the logic of get permit fee estimate and process permit fees</description>
    <label>Permit Fee Service Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>