force-app/main/default/objects/bgcc__Community_Setting__mdt/fields/bgcc__Setting_Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>bgcc__Setting_Static_Resource_Name__c</fullName>
    <description>Name of the Static Resource name that contains the Community settings.</description>
    <label>Setting Static Resource Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>