force-app/main/default/objects/bgcc__Community_Setting__mdt/fields/bgcc__TermsAndConditions_File_Name__c.field-meta.xml
<CustomField>
    <fullName>bgcc__TermsAndConditions_File_Name__c</fullName>
    <label>TermsAndConditions File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>