force-app/main/default/objects/bgcc__Community_Setting__mdt/fields/bgcc__User_Matching_Service__c.field-meta.xml
<CustomField>
    <fullName>bgcc__User_Matching_Service__c</fullName>
    <defaultValue>&quot;UserMatchByEmail&quot;</defaultValue>
    <inlineHelpText>Class name of the user matching service, used to match new Users self-registering to existing Contacts in the system.</inlineHelpText>
    <label>User Matching Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>